// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for state: info and theme: dark 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) auto;
  gap: 16px;
  place-items: start;
  padding: 16px;
  background: #001A33;
  border-radius: 4px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05),0 15px 20px 0 rgba(0,0,0,0.2);
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info and theme: light 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) auto;
  gap: 16px;
  place-items: start;
  padding: 16px;
  background: #E8EEFD;
  border-radius: 4px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05),0 15px 20px 0 rgba(0,0,0,0.2);
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral and theme: dark 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) auto;
  gap: 16px;
  place-items: start;
  padding: 16px;
  background: #001A33;
  border-radius: 4px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05),0 15px 20px 0 rgba(0,0,0,0.2);
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral and theme: light 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) auto;
  gap: 16px;
  place-items: start;
  padding: 16px;
  background: #E8EEFD;
  border-radius: 4px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05),0 15px 20px 0 rgba(0,0,0,0.2);
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: success and theme: dark 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) auto;
  gap: 16px;
  place-items: start;
  padding: 16px;
  background: #003320;
  border-radius: 4px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05),0 15px 20px 0 rgba(0,0,0,0.2);
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: success and theme: light 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) auto;
  gap: 16px;
  place-items: start;
  padding: 16px;
  background: #EBFAF0;
  border-radius: 4px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05),0 15px 20px 0 rgba(0,0,0,0.2);
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;
